[gd_scene load_steps=5 format=3 uid="uid://qou785xe3ayh"]

[ext_resource type="FontFile" uid="uid://c6o2q18e80rdv" path="res://assets/FugazOne-Regular.ttf" id="1_hayap"]
[ext_resource type="Script" uid="uid://bsxlk66q5c2ai" path="res://scenes/menus/scripts/settings_menu.gd" id="1_ojvp1"]
[ext_resource type="Texture2D" uid="uid://cwjrbfdqisn7u" path="res://assets/check.png" id="2_s2d1y"]
[ext_resource type="Texture2D" uid="uid://dxoenopcm87nm" path="res://assets/UnCheck.png" id="3_ojvp1"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ojvp1")

[node name="SettingsPanelMargins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="SettingsPanel" type="Control" parent="SettingsPanelMargins"]
layout_mode = 2

[node name="SettingsTabs" type="TabContainer" parent="SettingsPanelMargins/SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/side_margin = 0
theme_override_fonts/font = ExtResource("1_hayap")
theme_override_font_sizes/font_size = 56
current_tab = 0

[node name="General" type="Control" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="SettingsMargins" type="MarginContainer" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Settings" type="VBoxContainer" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="ShowStageTimer" type="HBoxContainer" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="CheckBox" type="CheckBox" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/ShowStageTimer"]
layout_mode = 2
theme_override_icons/checked = ExtResource("2_s2d1y")
theme_override_icons/unchecked = ExtResource("3_ojvp1")
button_pressed = true

[node name="Label" type="Label" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/ShowStageTimer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_hayap")
theme_override_font_sizes/font_size = 56
text = "Show Stage Timer"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ShowGameTimer" type="HBoxContainer" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="CheckBox" type="CheckBox" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/ShowGameTimer"]
layout_mode = 2
theme_override_icons/checked = ExtResource("2_s2d1y")
theme_override_icons/unchecked = ExtResource("3_ojvp1")

[node name="Label" type="Label" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/ShowGameTimer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_hayap")
theme_override_font_sizes/font_size = 56
text = "Show Game Timer"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ShowDecimals" type="HBoxContainer" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="CheckBox" type="CheckBox" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/ShowDecimals"]
layout_mode = 2
theme_override_icons/checked = ExtResource("2_s2d1y")
theme_override_icons/unchecked = ExtResource("3_ojvp1")

[node name="Label" type="Label" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/ShowDecimals"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_hayap")
theme_override_font_sizes/font_size = 56
text = "Show Timer Decimals"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AutoNextStage" type="HBoxContainer" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="CheckBox" type="CheckBox" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/AutoNextStage"]
layout_mode = 2
theme_override_icons/checked = ExtResource("2_s2d1y")
theme_override_icons/unchecked = ExtResource("3_ojvp1")

[node name="Label" type="Label" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/AutoNextStage"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_hayap")
theme_override_font_sizes/font_size = 56
text = "Skip Stage Complete Screen"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Audio" type="Control" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Settings" type="VBoxContainer" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="FXVolume" type="HBoxContainer" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="CheckBox" type="CheckBox" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings/FXVolume"]
layout_mode = 2
theme_override_icons/checked = ExtResource("2_s2d1y")
theme_override_icons/unchecked = ExtResource("3_ojvp1")
button_pressed = true

[node name="HSlider" type="HSlider" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings/FXVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="Label" type="Label" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings/FXVolume"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_hayap")
theme_override_font_sizes/font_size = 56
text = "FX Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolume" type="HBoxContainer" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="CheckBox" type="CheckBox" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings/MusicVolume"]
layout_mode = 2
theme_override_icons/checked = ExtResource("2_s2d1y")
theme_override_icons/unchecked = ExtResource("3_ojvp1")
button_pressed = true

[node name="HSlider" type="HSlider" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="Label" type="Label" parent="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings/MusicVolume"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_hayap")
theme_override_font_sizes/font_size = 56
text = "Music Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="SettingsPanelMargins/SettingsPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -97.0
offset_bottom = 91.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_hayap")
theme_override_font_sizes/font_size = 56
text = "X"

[connection signal="toggled" from="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/ShowStageTimer/CheckBox" to="." method="_on_show_stage_timer_toggled"]
[connection signal="toggled" from="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/ShowGameTimer/CheckBox" to="." method="_on_show_game_timer_toggled"]
[connection signal="toggled" from="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/ShowDecimals/CheckBox" to="." method="_on_show_decimals_toggled"]
[connection signal="toggled" from="SettingsPanelMargins/SettingsPanel/SettingsTabs/General/SettingsMargins/Settings/AutoNextStage/CheckBox" to="." method="_on_auto_next_stage_toggled"]
[connection signal="toggled" from="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings/FXVolume/CheckBox" to="." method="_on_fx_volume_toggled"]
[connection signal="drag_ended" from="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings/FXVolume/HSlider" to="." method="_on_fx_volume_drag_ended"]
[connection signal="toggled" from="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings/MusicVolume/CheckBox" to="." method="_on_music_volume_toggled"]
[connection signal="drag_ended" from="SettingsPanelMargins/SettingsPanel/SettingsTabs/Audio/MarginContainer/Settings/MusicVolume/HSlider" to="." method="_on_music_volume_drag_ended"]
[connection signal="pressed" from="SettingsPanelMargins/SettingsPanel/CloseButton" to="." method="_on_close_button_pressed"]
